--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #0B0B0B;
+    background-color: #3b323f;
   height: 100vh;
 }
 
@@ -25,7 +25,6 @@ button::-moz-focus-inner {
     width: 350px;
     font-size: 14px;
     box-shadow: 0px 1px 4px rgba(0,0,0,0.4);
-    border-radius: 4px;
 }
 table {
     border-collapse: collapse;
@@ -38,7 +37,6 @@ table {
     left: 0;
     transform: translateX(0);
     transition: all 0.3s ease;
-    border-radius: 25px;
 }
 table.actiu {
     transform: translateX(0px)top;
