--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #3b323f;
+    background-color: #0B0B0B;
   height: 100vh;
 }
 
