--- a/css/calendar.css
+++ b/css/calendar.css
@@ -8,6 +8,7 @@
     --color-bg-calendar: #1b1e22;
     --color-cell: #e3e3e3;
     --color-cell-disabled: #424649;
+    --color-bg: #0B0B0B
 }
 
 .root {
