--- a/css/calendar.css
+++ b/css/calendar.css
@@ -28,7 +28,7 @@
 }
 
 .calendar__header {
-    color: white;
+    color: black;
     display: flex;
     justify-content: space-between;
     text-transform: uppercase;
