--- a/calendar1/style.css
+++ b/calendar1/style.css
@@ -12,7 +12,7 @@ html {
 .container {
   width: 100%;
   height: 100vh;
-  background-color: #12121f;
+  background-color: #0B0B0B;
   color: #eee;
   display: flex;
   justify-content: center;
@@ -20,8 +20,8 @@ html {
 }
 
 .calendar {
-  width: 45rem;
-  height: 52rem;
+  width: 25rem;
+  height: 32rem;
   background-color: #222227;
   box-shadow: 0 0.5rem 3rem rgba(0, 0, 0, 0.4);
 }
@@ -29,7 +29,8 @@ html {
 .month {
   width: 100%;
   height: 12rem;
-  background-color: #167e56;
+  background-color: #FBF3DB;
+  color: #ffffff;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -94,7 +95,8 @@ html {
 }
 
 .days div:hover:not(.today) {
-  background-color: #262626;
+  background-color: #FBF3DB;
+  color: #ffffff;
   border: 0.2rem solid #777;
   cursor: pointer;
 }
