--- a/calendar1/style.css
+++ b/calendar1/style.css
@@ -30,7 +30,7 @@ html {
   width: 100%;
   height: 12rem;
   background-color: #FBF3DB;
-  color: #ffffff;
+  color: #000000;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -68,7 +68,7 @@ html {
   font-size: 1.5rem;
   font-weight: 400;
   letter-spacing: 0.1rem;
-  width: calc(44.2rem / 7);
+  width: calc(24.2rem / 7);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -85,7 +85,7 @@ html {
 .days div {
   font-size: 1.4rem;
   margin: 0.3rem;
-  width: calc(40.2rem / 7);
+  width: calc(20.2rem / 7);
   height: 5rem;
   display: flex;
   justify-content: center;
@@ -107,5 +107,6 @@ html {
 }
 
 .today {
-  background-color: #167e56;
+  background-color: #FBF3DB;
+  color: #000000;
 }
