--- a/calendar/app.css
+++ b/calendar/app.css
@@ -1,16 +1,25 @@
 :root {
-    --light-body: #f3f8fe;
-    --light-main: #fdfdfd;
-    --light-second: #0B0B0B;
+   
+    --light-body: #0b0b0b;
+    --light-main: #fff;
+    --light-second: #c3c2c8;
     --light-hover: #edf0f5;
     --light-text: #151426;
 
-    --blue: #FF5757;
+    --blue: #ff5757;
     --white: #fff;
 
     --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
     --font-family: cursive;
+}
+
+.dark {
+    --bg-body: var(--dark-body);
+    --bg-main: var(--dark-main);
+    --bg-second: var(--dark-second);
+    --color-hover: var(--dark-hover);
+    --color-txt: var(--dark-text);
 }
 
 .light {
@@ -44,7 +53,7 @@ body {
     padding: 20px;
     position: relative;
     overflow: hidden;
-    /* transform: scale(1.25); */
+    transform: scale(0.7);
 }
 
 .light .calendar {
@@ -202,13 +211,6 @@ body {
     background-color: var(--color-hover);
 }
 
-.calendar-footer {
-    padding: 10px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
 .toggle {
     display: flex;
 }
@@ -216,6 +218,26 @@ body {
 .toggle span {
     margin-right: 10px;
     color: var(--color-txt);
+}
+
+.dark-mode-switch {
+    position: relative;
+    width: 48px;
+    height: 25px;
+    border-radius: 14px;
+    background-color: var(--bg-second);
+    cursor: pointer;
+}
+
+.dark-mode-switch-ident {
+    width: 21px;
+    height: 21px;
+    border-radius: 50%;
+    background-color: var(--bg-main);
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    transition: left 0.2s ease-in-out;
 }
 
 .month-list {
