--- a/cal/app.css
+++ b/cal/app.css
@@ -32,8 +32,8 @@
 }
 
 * {
-    padding: 0;
-    margin: 0;
+    /*padding: 0;*/
+    /*margin: 0;*/
     box-sizing: border-box;
 }
 
@@ -41,7 +41,7 @@ html,
 body {
     /*height: 100vh;*/
     display: grid;
-    place-items: center;
+    place-items: left;
     font-family: var(--font-family);
     background-color: var(--bg-body);
 }
@@ -51,7 +51,7 @@ body {
     width: max-content;
     background-color: var(--bg-main);
     border-radius: 30px;
-    padding: 20px;
+    /*padding: 20px;*/
     position: relative;
     overflow: hidden;
     /* transform: scale(1.25); */
