--- a/cal/app.css
+++ b/cal/app.css
@@ -54,7 +54,7 @@ body {
     /*padding: 20px;*/
     position: relative;
     overflow: hidden;
-    /* transform: scale(1.25); */
+    transform: scale(1.25);
 }
 
 .light .calendar {
