--- a/cal/app.css
+++ b/cal/app.css
@@ -54,7 +54,7 @@ body {
     /*padding: 20px;*/
     position: static;
     overflow: hidden;
-    /*transform: scale(1);*/
+    transform: scale(1);
 }
 
 .light .calendar {
