--- a/greet/style.css
+++ b/greet/style.css
@@ -9,7 +9,7 @@ body {
     align-items: center;
     justify-content: center;
   flex-direction: column;
-  min-height: 100%;
+  /*min-height: 100%;*/
 }
 
 button::-moz-focus-inner { 
