--- a/greet/style.css
+++ b/greet/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Arial', sans-serif;
     background-color: #0B0B0B;
-  height: 100vh;
+  /*height: 100vh;*/
 }
 
 .wrapper {
