--- a/greet_v2/style.css
+++ b/greet_v2/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #0B0B0B;
+    background-color: #191919;
   /*height: 100vh;*/
 }
 
